--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "antd": "^5.3.2",
     "axios": "^1.3.4",
     "eslint": "8.35.0",
