--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@vercel/analytics": "^0.1.11",
     "antd": "^5.3.2",
     "axios": "^1.3.4",
     "eslint": "8.35.0",
@@ -17,6 +18,7 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "steamgriddb": "^2.0.1"
+    "steamgriddb": "^2.0.1",
+    "typescript": "^5.0.2"
   }
 }
